--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -23,6 +23,19 @@
                 {{ 'LOGIN.BUTTON' | translate }}
               </button>
             </div>
+            <div class="divider-line">
+              <span></span>
+              <p>O bien, continua con</p>
+              <span></span>
+            </div>
+            <div class="d-flex justify-content-center">
+              <button mat-raised-button class="login-button" color="primary" type="button" (click)="signupWithGoogle()">
+                <div class="icon-container">
+                  <img class="social-icon" src="../../../../assets/image/general-icons/google.svg">
+                  Google
+                </div>
+              </button>
+            </div>
 
             <h4 *ngIf="loginResponse !== null"
                 id="passerr"
