feat: add migrate util, hide dates when not confirmed, create format date pipe for modularization

--- a/src/app/shared/components/event-date-chips/event-date-chips.component.html
+++ b/src/app/shared/components/event-date-chips/event-date-chips.component.html
@@ -2,7 +2,7 @@
     <mat-chip *ngFor="let eventDate of eventDates">
         <div class="chip">
             <i class="fa {{getIconClass(eventDate)}}" [style.color]="(getAppColors() | async).background"></i>
-            <span [style.color]="(getAppColors() | async).background">{{formatDate(eventDate)}}</span>
+            <span [style.color]="(getAppColors() | async).background">{{pipeInput(eventDate) | FormatDateEventPipe }}</span>
         </div>
     </mat-chip>
 </mat-chip-set>
