--- a/src/app/shared/components/event-date-section/event-date-section.component.html
+++ b/src/app/shared/components/event-date-section/event-date-section.component.html
@@ -1,4 +1,4 @@
-<app-event-section title="{{ 'HOME.EVENTS.DATE.TITLE' | translate}}">
+<app-event-section *ngIf="isShown()" title="{{ 'HOME.EVENTS.DATE.TITLE' | translate}}">
     <div class="event-date-container">
         <app-event-date [eventDate]="EventDate.INSCRIPTION" [dates]="dates"></app-event-date>
         <app-event-date [eventDate]="EventDate.EVENT" [dates]="dates"></app-event-date>
