feat: new event dates
- Add inscription event
- Add period for event and inscription
- Mobile style changes
- Edit inscription and event form

* chore: refactor EventCard interface and rename it to Event

* chore: update Event interface usage

* chore: move isCurrentUserAdmin method to UserService

* chore: refactor EventService

* fix: the current event date is the opening date, not the inscription

* fix: fix EventService

* fix: update EventCardShortComponent

* feat: update EventEditorModalComponent (WIP)

* feat: add tooltip to status options

* feat: improve status radio buttons style

* feat: form validations & error display

* chore: move event editor form to its own class, EventEditorForm

* style: set event status options color according to current app colors

* chore: create script to migrate events' date

* chore: add new event dates (inscription & finish)

* chore: update getUpcomingEvents method

* chore: create update to add new dates to all events

* feature: add new event dates to form (WIP)

* chore: refactor event dates schema
Opening is renamed to Event and now CONFIRMED dates can have a lastDate if it's a period

* feat: add icon to EventCardShortComponent

* chore: update event editor form

* chore: improve form error display

* chore: fix event service method signature

* chore: show errors and submit only if form changed

* chore: emit update to event pages

* fix: parse month and year form inputs to integer

* feat: add dates information to event pages

* chore: move dates event section below the description

* feat: add date chips to events title

* style: change styles for mobile devices

* feat: add migrate util, hide dates when not confirmed, create format date pipe for modularization

---------

Co-authored-by: Federico Shih <fedeshih@gmail.com>

--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -1,5 +1,5 @@
 <div class="main-container event">
-  <app-event-title>
+  <app-event-title [dates]="event?.dates">
     {{ 'DATAANALYSIS.TITLE' | translate }}
   </app-event-title>
 
@@ -68,6 +68,8 @@
       </ng-container>
   </div>
 
+  <app-event-date-section [dates]="event?.dates" />
+
   <app-event-section title="{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}">
     <app-event-faq-accordion [faq]="faq">
     </app-event-faq-accordion>
@@ -79,5 +81,5 @@
   </app-event-section>
 
     <!-- Editor de evento -->
-    <app-event-editor-button *ngIf="!!event" [event]="event"></app-event-editor-button>
+    <app-event-editor-button *ngIf="!!event" [event]="event" (updateEmitter)="updateEvent($event)"></app-event-editor-button>
 </div>
