--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
@@ -1,5 +1,5 @@
 <div class="main-container event">
-  <app-event-title>{{ 'PYTHONCOURSES.TITLE' | translate }}</app-event-title>
+  <app-event-title [dates]="event?.dates">{{ 'PYTHONCOURSES.TITLE' | translate }}</app-event-title>
   <div *ngIf="enrollAvailable()">
     <div class="d-flex flex-row-reverse">
       <button class="goback-button">
@@ -8,6 +8,7 @@
       </button>
     </div>
   </div>
+
   <!-- Introductory text -->
   <app-event-section title="{{ 'PYTHONCOURSES.DESC_TITLE' | translate }}">
     <p>{{ 'PYTHONCOURSES.DESC' | translate }}</p>
@@ -135,6 +136,8 @@
   </div>
   -->
 
+  <app-event-date-section [dates]="event?.dates" />
+
   <app-event-section title="{{ 'PYTHONCOURSES.FAQ.TITLE' | translate}}">
     <app-event-faq-accordion [faq]="faq">
     </app-event-faq-accordion>
@@ -173,7 +176,7 @@
   </div>
 
     <!-- Editor de evento -->
-    <app-event-editor-button *ngIf="!!event" [event]="event"></app-event-editor-button>
+    <app-event-editor-button *ngIf="!!event" [event]="event" (updateEmitter)="updateEvent($event)"></app-event-editor-button>
 
   <!-- Sponsors Actuales -->
   <!-- <div class="bottomLine mt-4">
