--- a/src/app/shared/components/event-title/event-title.component.css
+++ b/src/app/shared/components/event-title/event-title.component.css
@@ -10,13 +10,14 @@
 
 .title-container {
     padding-top: 2vmin;
-    padding-bottom: 2vmin;
     border-top: var(--primary-color) 2px solid;
     border-bottom: var(--primary-color) 2px solid;
     vertical-align: middle;
     text-align: center;
     align-content: center;
-    margin-bottom: 2%
+    margin-bottom: 2%;
+    position: relative;
+    padding-bottom: 1.5rem;
 }
 
 .title {
@@ -24,4 +25,10 @@
     font-weight: 400;
     color: var(--secondary-color);
     letter-spacing: 1px;
+}
+
+.chip-list-container {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
