--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
@@ -81,3 +81,18 @@ mat-expansion-panel-header {
 mat-panel-title {
     color:var(--bs-ieee-bright-blue);
 }
+
+.description-text {
+    text-align: left;
+}
+
+.content-card-list {
+    display:flex;
+    margin-bottom:5rem;
+}
+
+@media(max-width: 767px) {
+    .content-card-list {
+        flex-direction: column;
+    }
+}
