--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -30,7 +30,7 @@
   <app-event-section
   title="{{ 'DATAANALYSIS.DESC_TITLE' | translate }}"
   >
-  <p>{{ 'DATAANALYSIS.DESC' | translate }}</p>
+  <p class="description-texto">{{ 'DATAANALYSIS.DESC' | translate }}</p>
   </app-event-section>
   <app-event-section
   title="{{ 'DATAANALYSIS.FORMAT_SUBTITLE' | translate }}"
