--- a/src/app/shared/components/event-content-card/event-content-card.component.css
+++ b/src/app/shared/components/event-content-card/event-content-card.component.css
@@ -8,8 +8,8 @@ mat-card {
 }
 
 .content-card{
-    margin: 0 1rem;
-    padding: 0 1rem;
+    margin: 1rem 1rem;
+    padding: 1rem 1rem;
 }
 
 .content {
