--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -61,7 +61,7 @@
         margin-right: auto;
         margin-left: auto;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
     }
 
     .page-footer .row > div{
