--- a/src/app/shared/components/event-editor-modal/event-editor-modal.component.css
+++ b/src/app/shared/components/event-editor-modal/event-editor-modal.component.css
@@ -13,10 +13,22 @@
 .modal-body {
     display: flex;
     flex-direction: column;
+    row-gap: 1rem;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
     row-gap: 0.5rem;
 }
 
-.modal-body label {
+.form-input-label {
+    font-weight: 600;
+    font-size: 1rem;
+    margin-bottom: 0;
+}
+
+.event-date-label {
     font-weight: 600;
     font-size: 0.9rem;
     margin-bottom: 0;
@@ -230,15 +242,18 @@
     padding-bottom: 0.5rem;
 }
 
-.modal-footer .close-btn {
+.modal-footer .close-btn, .clear-btn {
     background-color: var(--bs-light);
     color: var(--color);
     border-color: var(--color);
     box-shadow: 0 0 4px var(--color);
 }
 
-.modal-footer .close-btn:hover {
+.modal-footer .close-btn:hover, .clear-btn:hover {
     box-shadow: 0 0 2px var(--color);
+    background-color: var(--bs-light);
+    color: var(--color);
+    border-color: var(--color);
 }
 
 .modal-footer .save-btn {
