--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -30,7 +30,7 @@
     </app-event-section>
   </div>
 
-  <app-event-date-section [dates]="event?.dates" />
+  <app-event-date-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink" />
 
   <!-- Sponsors -->
   <app-event-section title="{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}">
