--- a/src/app/shared/components/event-date-section/event-date-section.component.css
+++ b/src/app/shared/components/event-date-section/event-date-section.component.css
@@ -1,7 +1,7 @@
 .event-date-container {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     padding: 1rem 15rem;
     gap: 5rem;
