--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -68,7 +68,7 @@
       </ng-container>
   </div>
 
-  <app-event-date-section [dates]="event?.dates" />
+  <app-event-date-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink" />
 
   <app-event-section title="{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}">
     <app-event-faq-accordion [faq]="faq">
